[package]
name = "natural-sort-rs"
version = "0.1.1"
edition = "2021"
authors = ["Vrtgs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vrtgs/natural-sort-rs"
readme = "README.md"
description = "sorting strings based on [Natural sort order](https://en.wikipedia.org/wiki/Natural_sort_order)"

[features]
default = ["alloc"]
alloc = []

[dependencies]
